--- a/.ci_support/linux_r_base3.4.1.yaml
+++ b/.ci_support/linux_r_base3.4.1.yaml
@@ -1,11 +1,15 @@
-build_number_decrement:
-- '0'
+c_compiler:
+- toolchain_c
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
+cxx_compiler:
+- toolchain_cxx
 docker_image:
 - condaforge/linux-anvil
+fortran_compiler:
+- toolchain_fort
 pin_run_as_build:
   r-base:
     max_pin: x.x.x
