--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,29 +17,30 @@ source:
 build:
   merge_build_host: true  # [win]
   number: 0
-  script: R CMD INSTALL --build .
   rpaths:
     - lib/R/lib/
     - lib/
 
 requirements:
   build:
-    - cross-r-base {{ r_base }}  # [build_platform != target_platform]
-    - r-sf                       # [build_platform != target_platform]
-    - r-gsw                      # [build_platform != target_platform]
-    - r-testthat                 # [build_platform != target_platform]
-    - r-rcpp                     # [build_platform != target_platform]
-    - {{ compiler('c') }}        # [not win]
-    - {{ compiler('cxx') }}      # [not win]
-    - {{ compiler('fortran') }}  # [not win]
+    - cross-r-base {{ r_base }}        # [build_platform != target_platform]
+    - r-sf                             # [build_platform != target_platform]
+    - r-gsw                            # [build_platform != target_platform]
+    - r-testthat                       # [build_platform != target_platform]
+    - r-rcpp                           # [build_platform != target_platform]
+    - {{ compiler('c') }}              # [not win]
+    - {{ stdlib('c') }}                # [not win]
+    - {{ compiler('cxx') }}            # [not win]
+    - {{ compiler('fortran') }}        # [not win]
     - {{ compiler('m2w64_c') }}        # [win]
-    - {{ compiler('m2w64_cxx') }}        # [win]
-    - {{ compiler('m2w64_fortran') }}        # [win]
-    - {{ posix }}filesystem        # [win]
+    - {{ stdlib('m2w64_c') }}          # [win]
+    - {{ compiler('m2w64_cxx') }}      # [win]
+    - {{ compiler('m2w64_fortran') }}  # [win]
+    - {{ posix }}filesystem            # [win]
     - {{ posix }}make
-    - {{ posix }}sed               # [win]
-    - {{ posix }}coreutils         # [win]
-    - {{ posix }}zip               # [win]
+    - {{ posix }}sed                   # [win]
+    - {{ posix }}coreutils             # [win]
+    - {{ posix }}zip                   # [win]
   host:
     - r-base
     - r-rcpp
