--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -62,7 +62,7 @@ test:
 
 about:
   home: http://dankelley.github.com/oce/
-  license: GPL-3.0
+  license: GPL-3.0-only
   license_file: {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3
   summary: Supports the analysis of Oceanographic data, including 'ADCP' measurements, measurements made with 'argo' floats, 'CTD' measurements, sectional data, sea-level time series, coastline and topographic data, etc. Provides specialized functions for calculating seawater properties such as potential temperature in either
     the 'UNESCO' or 'TEOS-10' equation of state. Produces graphical displays that conform to the conventions of the Oceanographic literature.
